# sub-arctic

./: .gitignore  CMakeLists.txt  debug.sh  run.sh
res/environments/backgrounds/ocean/: long_quad_25d.mtl
res/environments/objects/: iceberg_positions_v06.txt  iceberg_positions_v07.txt  iceberg_positions_v08.txt  mine_positions_v01.txt  mine_positions_v02.txt  mine_positions_v03.txt
res/environments/objects/ice/: base.mtl  iceberg_02.mtl  iceberg_04.mtl  iceberg_06.mtl
res/environments/objects/mines/: 71888 - concrete piles - License.html  mine.rar  naval_mine.mtl  naval_mine_v02.mtl
res/vehicles/torpedo/: torpedo.mtl
shaders/: advanced_glsl_vs.shader  basic_lighting_fs.shader  basic_lighting_vs.shader  blending_fs.shader  color_fs.shader  colors_fs.shader  depth_testing_fs.shader  depth_testing_vs.shader  fragment.shader  framebuffer_fs.shader  framebuffer_vs.shader  ice_fs.shader  ice_vs.shader  light_casters_fs.shader  light_casters_vs.shader  lighting_maps_fs.shader  materials_fs.shader  materials_vs.shader  multiple_lights_fs.shader  multiple_lights_vs.shader  noise_fs.shader  noise_vs.shader  red_fs.shader  simple_noise_fs.shader  stencil_single_color_fs.shader  tex_fs.shader  tex_vs.shader  text_fs.shader  text_vs.shader  vertex.shader
src/: app.cpp  app.h  box_collider.cpp  box_collider.h  camera.cpp  camera.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  object.cpp  object.h  particle.cpp  particle.h  particle_system.cpp  particle_system.h  player.cpp  player.h  shader.cpp  shader.h  text.cpp  text.h  timer.cpp  timer.h
(+2 files in other folders)
